added more styling for localization

--- a/locales/ar-EG.json
+++ b/locales/ar-EG.json
@@ -40,7 +40,7 @@
     "deleteAll": "امسح الكل"
   },
   "settings": {
-    "title": "الإعدادات",
+    "title": "الإعدادات ⚙️",
     "theme": "المظهر",
     "themeOptions": {
       "dark": "داكن",
