--- a/locales/ar-SA.json
+++ b/locales/ar-SA.json
@@ -40,7 +40,7 @@
     "deleteAll": "حذف الكل"
   },
   "settings": {
-    "title": "الإعدادات",
+    "title": "الإعدادات ⚙️",
     "theme": "المظهر",
     "themeOptions": {
       "dark": "داكن",
