--- a/locales/de.json
+++ b/locales/de.json
@@ -40,7 +40,7 @@
     "deleteAll": "Alle löschen"
   },
   "settings": {
-    "title": "Einstellungen",
+    "title": "Einstellungen ⚙️",
     "theme": "Design",
     "themeOptions": {
       "dark": "Dunkel",
