--- a/locales/en.json
+++ b/locales/en.json
@@ -40,7 +40,7 @@
     "deleteAll": "Delete All"
   },
   "settings": {
-    "title": "Settings",
+    "title": "Settings ⚙️",
     "theme": "Theme",
     "themeOptions": {
       "dark": "Dark",
