--- a/locales/de.json
+++ b/locales/de.json
@@ -41,7 +41,7 @@
   },
   "settings": {
     "title": "Einstellungen ⚙️",
-    "theme": "Design",
+    "theme": "Thema (Kommt bald)",
     "themeOptions": {
       "dark": "Dunkel",
       "light": "Hell",
