--- a/locales/en.json
+++ b/locales/en.json
@@ -41,7 +41,7 @@
   },
   "settings": {
     "title": "Settings ⚙️",
-    "theme": "Theme",
+    "theme": "Theme (Coming Soon)",
     "themeOptions": {
       "dark": "Dark",
       "light": "Light",
