--- a/locales/fr.json
+++ b/locales/fr.json
@@ -41,7 +41,7 @@
   },
   "settings": {
     "title": "Paramètres ⚙️",
-    "theme": "Thème",
+    "theme": "Thème (Bientôt disponible)",
     "themeOptions": {
       "dark": "Sombre",
       "light": "Clair",
