--- a/locales/ru.json
+++ b/locales/ru.json
@@ -41,7 +41,7 @@
   },
   "settings": {
     "title": "Настройки ⚙️",
-    "theme": "Тема",
+    "theme": "Тема (Скоро будет)",
     "themeOptions": {
       "dark": "Темная",
       "light": "Светлая",
