--- a/locales/ar-SA.json
+++ b/locales/ar-SA.json
@@ -41,7 +41,7 @@
   },
   "settings": {
     "title": "الإعدادات ⚙️",
-    "theme": "المظهر",
+    "theme": "المظهر (قريبًا)",
     "themeOptions": {
       "dark": "داكن",
       "light": "فاتح",
