Localized the transactions screen

--- a/locales/ar-EG.json
+++ b/locales/ar-EG.json
@@ -22,14 +22,18 @@
   },
   "transactions": {
     "addTransaction": "أضف معاملة 🌐",
+    "merchant": "تاجر",
+    "category": "الفئة",
     "date": "التاريخ",
     "amount": "المبلغ",
-    "type": "النوع",
+    "transactionType": "نوع المعاملة",
+    "transactionTime": "وقت المعاملة",
     "income": "دخل",
     "expense": "مصروف",
     "total": "الإجمالي",
     "currentTime": "استخدم الوقت الحالي",
     "manuallyEnterTime": "أدخل الوقت يدويًا",
+    "enterDate&Time": "أدخل التاريخ والوقت",
     "add": "أضف معاملة",
     "edit": "عدل المعاملة",
     "delete": "احذف المعاملة",
