--- a/locales/ar-SA.json
+++ b/locales/ar-SA.json
@@ -22,14 +22,18 @@
   },
   "transactions": {
     "addTransaction": "إضافة معاملة 🌐",
+    "merchant": "تاجر",
+    "category": "الفئة",
     "date": "التاريخ",
     "amount": "المبلغ",
-    "type": "النوع",
+    "transactionType": "نوع المعاملة",
+    "transactionTime": "وقت المعاملة",
     "income": "دخل",
     "expense": "مصروف",
     "total": "الإجمالي",
     "currentTime": "استخدام الوقت الحالي",
     "manuallyEnterTime": "إدخال الوقت يدويًا",
+    "enterDate&Time": "إدخال التاريخ والوقت",
     "add": "إضافة معاملة",
     "edit": "تعديل المعاملة",
     "delete": "حذف المعاملة",
