--- a/locales/de.json
+++ b/locales/de.json
@@ -22,14 +22,18 @@
   },
   "transactions": {
     "addTransaction": "Transaktion hinzufügen 🌐",
+    "merchant": "Händler",
+    "category": "Kategorie",
     "date": "Datum",
     "amount": "Betrag",
-    "type": "Art",
+    "transactionType": "Transaktionstyp",
+    "transactionTime": "Transaktionszeit",
     "income": "Einnahmen",
     "expense": "Ausgaben",
     "total": "Gesamt",
     "currentTime": "Aktuelle Zeit verwenden",
     "manuallyEnterTime": "Zeit manuell eingeben",
+    "enterDate&Time": "Datum und Zeit eingeben",
     "add": "Hinzufügen",
     "edit": "Bearbeiten",
     "delete": "Löschen",
