--- a/locales/en.json
+++ b/locales/en.json
@@ -22,14 +22,18 @@
   },
   "transactions": {
     "addTransaction": "Add Transaction 🌐",
+    "merchant": "Merchant",
+    "category": "Category",
     "date": "Date",
     "amount": "Amount",
-    "type": "Type",
+    "transactionType": "Transaction Type",
+    "transactionTime": "Transaction Time",
     "income": "Income",
     "expense": "Expense",
     "total": "Total",
     "currentTime": "Use current time",
     "manuallyEnterTime": "Manually enter time",
+    "enterDate&Time": "Enter date and time",
     "add": "Add Transaction",
     "edit": "Edit Transaction",
     "delete": "Delete Transaction",
