--- a/locales/fr.json
+++ b/locales/fr.json
@@ -22,14 +22,18 @@
   },
   "transactions": {
     "addTransaction": "Ajouter une transaction 🌐",
+    "merchant": "Marchand",
+    "category": "Catégorie",
     "date": "Date",
     "amount": "Montant",
-    "type": "Type",
+    "transactionType": "Type de transaction",
+    "transactionTime": "Heure de la transaction",
     "income": "Revenus",
     "expense": "Dépenses",
     "total": "Total",
     "currentTime": "Utiliser l'heure actuelle",
     "manuallyEnterTime": "Saisir l'heure manuellement",
+    "enterDate&Time": "Saisir la date et l'heure",
     "add": "Ajouter",
     "edit": "Modifier",
     "delete": "Supprimer",
