--- a/locales/ru.json
+++ b/locales/ru.json
@@ -22,14 +22,18 @@
   },
   "transactions": {
     "addTransaction": "Добавить транзакцию 🌐",
+    "merchant": "Торговец",
+    "category": "Категория",
     "date": "Дата",
     "amount": "Сумма",
-    "type": "Тип",
+    "transactionType": "Тип транзакции",
+    "transactionTime": "Время транзакции",
     "income": "Доход",
     "expense": "Расход",
     "total": "Итого",
     "currentTime": "Использовать текущее время",
     "manuallyEnterTime": "Ввести время вручную",
+    "enterDate&Time": "Введите дату и время",
     "add": "Добавить",
     "edit": "Изменить",
     "delete": "Удалить",
