Updated remainingBalance in en.json

--- a/locales/en.json
+++ b/locales/en.json
@@ -10,7 +10,7 @@
     "goodEvening": "Good evening,",
     "totalIncome": "Total Income",
     "totalExpenses": "Total Expenses",
-    "remainingBalance": "Remaining",
+    "remainingBalance": "Remaining Balance",
     "spendingOverTime": "Spending Over Time",
     "recentTransactions": "Recent Transactions"
   },
