Updated the Income bar chart title to represent it accurately

--- a/locales/ar-EG.json
+++ b/locales/ar-EG.json
@@ -16,7 +16,7 @@
   },
   "breakdown": {
     "expenseBreakdown": "تفصيل المصروفات 📊",
-    "spendingOverPastSixMonths": "خلال الستة شهور اللي فاتوا",
+    "incomeOverPastSixMonths": "الدخل خلال الستة أشهر الماضية",
     "otherInsights": "معلومات إضافية",
     "insightsLink": "اكتشف المزيد عن الأمور المالية وازاي تبقى غني هنا."
   },
