--- a/locales/ar-SA.json
+++ b/locales/ar-SA.json
@@ -16,7 +16,7 @@
   },
   "breakdown": {
     "expenseBreakdown": "تفصيل المصروفات 📊",
-    "spendingOverPastSixMonths": "خلال الأشهر الستة الماضية",
+    "incomeOverPastSixMonths": "الدخل خلال الستة أشهر الماضية",
     "otherInsights": "رؤى إضافية",
     "insightsLink": "اكتشف المزيد عن الذكاء المالي وكيفية بناء الثروة هنا."
   },
