--- a/locales/de.json
+++ b/locales/de.json
@@ -16,7 +16,7 @@
   },
   "breakdown": {
     "expenseBreakdown": "Ausgabenübersicht 📊",
-    "spendingOverPastSixMonths": "In den letzten 6 Monaten",
+    "incomeOverPastSixMonths": "Einkommen in den letzten 6 Monaten",
     "otherInsights": "Weitere Erkenntnisse",
     "insightsLink": "Entdecken Sie mehr über Finanzintelligenz und Vermögensaufbau hier."
   },
