--- a/locales/en.json
+++ b/locales/en.json
@@ -16,7 +16,7 @@
   },
   "breakdown": {
     "expenseBreakdown": "Expense Breakdown 📊",
-    "spendingOverPastSixMonths": "In the Past 6 months",
+    "incomeOverPastSixMonths": "Income in the Past 6 months",
     "otherInsights": "Other Insights",
     "insightsLink": "Discover more about financial insights and how to become wealthy here."
   },
