--- a/locales/fr.json
+++ b/locales/fr.json
@@ -16,7 +16,7 @@
   },
   "breakdown": {
     "expenseBreakdown": "Répartition des dépenses 📊",
-    "spendingOverPastSixMonths": "Ces six derniers mois",
+    "incomeOverPastSixMonths": "Revenus des 6 derniers mois",
     "otherInsights": "Autres perspectives",
     "insightsLink": "Découvrez comment comprendre vos finances et devenir riche ici."
   },
