--- a/locales/ru.json
+++ b/locales/ru.json
@@ -16,7 +16,7 @@
   },
   "breakdown": {
     "expenseBreakdown": "Разбивка расходов 📊",
-    "spendingOverPastSixMonths": "За последние 6 месяцев",
+    "incomeOverPastSixMonths": "Доход за последние 6 месяцев",
     "otherInsights": "Дополнительные аналитические данные",
     "insightsLink": "Узнайте больше о финансовой грамотности и как стать богатым здесь."
   },
