Added successful transaction added in all languages

--- a/locales/ar-EG.json
+++ b/locales/ar-EG.json
@@ -37,7 +37,8 @@
     "add": "أضف معاملة",
     "edit": "عدل المعاملة",
     "delete": "احذف المعاملة",
-    "confirmDelete": "متأكد إنك عايز تمسح دي؟"
+    "confirmDelete": "متأكد إنك عايز تمسح دي؟",
+    "successMessage": "تمت الإضافة!"
   },
   "history": {
     "transactionHistory": "سجل المعاملات 📜",
