--- a/locales/ar-SA.json
+++ b/locales/ar-SA.json
@@ -37,7 +37,8 @@
     "add": "إضافة معاملة",
     "edit": "تعديل المعاملة",
     "delete": "حذف المعاملة",
-    "confirmDelete": "هل أنت متأكد من رغبتك في حذف هذه المعاملة؟"
+    "confirmDelete": "هل أنت متأكد من رغبتك في حذف هذه المعاملة؟",
+    "successMessage": "تمت الإضافة!"
   },
   "history": {
     "transactionHistory": "سجل المعاملات 📜",
