--- a/locales/ru.json
+++ b/locales/ru.json
@@ -37,7 +37,8 @@
     "add": "Добавить",
     "edit": "Изменить",
     "delete": "Удалить",
-    "confirmDelete": "Вы уверены, что хотите удалить эту транзакцию?"
+    "confirmDelete": "Вы уверены, что хотите удалить эту транзакцию?",
+    "successMessage": "Транзакция добавлена!"
   },
   "history": {
     "transactionHistory": "История транзакций 📜",
