--- a/locales/en.json
+++ b/locales/en.json
@@ -37,7 +37,8 @@
     "add": "Add Transaction",
     "edit": "Edit Transaction",
     "delete": "Delete Transaction",
-    "confirmDelete": "Are you sure you want to delete this transaction?"
+    "confirmDelete": "Are you sure you want to delete this transaction?",
+    "successMessage": "Transaction added!"
   },
   "history": {
     "transactionHistory": "Transaction History 📜",
