--- a/locales/ar-EG.json
+++ b/locales/ar-EG.json
@@ -4,6 +4,11 @@
     "title": "آه!",
     "description": "وقعت في صفحة مش موجودة أصلًا."
   },
+  "editUsername": {
+    "enterYourName": "أدخل اسمك",
+    "cancel": "إلغاء",
+    "save": "حفظ"
+  },
   "home": {
     "goodMorning": "صباح الخير،",
     "goodAfternoon": "مساء الخير،",
