--- a/locales/ru.json
+++ b/locales/ru.json
@@ -66,6 +66,8 @@
       "fr": "Французский",
       "de": "Немецкий",
       "ru": "Русский"
-    }
+    },
+    "savedMessage": "Ваши настройки были сохранены! Пожалуйста, обновите приложение, чтобы увидеть изменения.",
+    "refreshedMessage": "Настройки обновлены!"
   }
 }
