--- a/locales/ar-SA.json
+++ b/locales/ar-SA.json
@@ -66,6 +66,8 @@
       "fr": "الفرنسية",
       "de": "الألمانية",
       "ru": "الروسية"
-    }
+    },
+    "savedMessage": "تم حفظ إعداداتك! يرجى تحديث التطبيق لرؤية التغييرات.",
+    "refreshedMessage": "تم تحديث الإعدادات!"
   }
 }
